<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.asmita.login_inpods.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:background="@color/colorAccent"/>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:orientation="vertical"
            android:layout_marginTop="0dp">


                <EditText
                    android:id="@+id/fName"
                    android:hint="@string/action_f1name"
                    android:layout_marginTop="0dp"
                    android:layout_width="200dp"
                    android:layout_height="50dp"/>
                <EditText
                    android:id="@+id/lName"
                    android:hint="@string/action_l1name"
                    android:layout_marginTop="10dp"
                    android:layout_width="200dp"
                    android:layout_height="50dp"/>


                <EditText
                    android:id="@+id/email_id"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:layout_width="200dp"
                    android:layout_height="50dp"/>
                <EditText
                    android:id="@+id/password_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="30dp"
                android:background="@color/colorPrimary"
                android:text="Sign up"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
